# scanner

./: .gitignore  AGENTS.md  VSCode Security Scanner.spec  cli.py  entitlements.plist  main.py  pyproject.toml  rules.toml  vscode-scanner.spec
docs/: attack-vectors.md  metricas-v3.3.md  tasks.md
gui/: app.py  correlation_view.py  dashboard.py  file_inspector.py  ioc_inspector.py  settings.py  theme.py  timeline.py  widgets.py
hooks/: hook-darkdetect.py
scripts/: build_app.sh  build_cli.sh
security_scanner/: __init__.py  config.py
security_scanner/cache/: __init__.py  cache.py
security_scanner/correlation/: __init__.py  engine.py
security_scanner/detectors/: __init__.py  backdoor.py  ci_cd_abuse.py  command_injection.py  container_escape.py  exfiltration.py  ide_poisoning.py  persistence.py  supply_chain.py
security_scanner/heuristics/: __init__.py  behavioral.py  contextual.py  entropy.py  scoring.py  severity.py
security_scanner/models/: __init__.py  correlation_event.py  finding.py  scan_result.py  threat_intel.py
security_scanner/parsers/: __init__.py  ast_parser.py  jsonc.py  toml_parser.py  yaml_parser.py
security_scanner/queue/: __init__.py  queue.py
security_scanner/reporting/: __init__.py  html_report.py  markdown_report.py  pdf_report.py  report.py
tests/: test_ast_parser.py  test_cache.py  test_correlation.py  test_detectors.py  test_gui.py  test_heuristics.py  test_models.py  test_obfuscation.py  test_parsers.py  test_queue.py  test_reporting.py  test_rules.py  test_scanners.py  test_signatures.py  test_telemetry.py
(+28 files in other folders)
